--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dayjs": "^1.11.7",
     "i18next": "^22.4.15",
     "react": "^18.2.0",
+    "react-auth-kit": "^2.12.2",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
